Added some error handling

--- a/src/app/features/article/article-card/article-card.html
+++ b/src/app/features/article/article-card/article-card.html
@@ -19,7 +19,7 @@
 <div class="footer">
   <div class="author">
     by
-    <span (click)="onAuthorClick(article.authorId)">{{
+    <span (click)="authorClick.emit(article.authorId)">{{
       article.authorName
     }}</span>
   </div>
