--- a/src/app/pages/article-details/article-details.html
+++ b/src/app/pages/article-details/article-details.html
@@ -6,6 +6,7 @@
   [article]="article"
   [likes$]="likes$"
   [isCopied]="isCopied"
+  [isOwner]="isOwner"
   [hasLiked]="hasLiked"
   [hasBookmarked]="hasBookmarked"
   [currentUserId]="currentUserId"
