--- a/src/app/pages/articles/articles.html
+++ b/src/app/pages/articles/articles.html
@@ -11,7 +11,7 @@
 <app-article-grid
   [articles]="articles"
   [columns]="3"
-  (openAuthorDetails)="onAuthorClick($event)"
+  (authorClick)="openAuthorProfile($event)"
 ></app-article-grid>
 <div #scrollAnchor class="scroll-anchor"></div>
 @if (isLoadingMore) {
