--- a/src/styles.css
+++ b/src/styles.css
@@ -1,343 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
-:root {
-  --fs-body: clamp(0.875rem, 0.5rem + 0.6vw, 1.125rem);
-
-  --fs-heading-6: clamp(0.9rem, 0.5rem + 0.8vw, 1.2rem);
-  --fs-heading-5: clamp(1rem, 0.6rem + 1vw, 1.5rem);
-  --fs-heading-4: clamp(1.1rem, 0.65rem + 1.2vw, 1.75rem);
-  --fs-heading-3: clamp(1.25rem, 0.7rem + 1.5vw, 2rem);
-  --fs-heading-2: clamp(1.5rem, 0.8rem + 2vw, 2.4rem);
-  --fs-heading-1: clamp(2.5rem, 1rem + 6vw, 7rem);
-
-  --bg-color: white;
-  --text-color: #2e2e2e;
-  --link-color: #1232ff;
-  --button-bg: #1232ff;
-  --button-text: white;
-  --button-hover-bg: #3451ff;
-  --primary-button-bg: #2e2e2e;
-  --primary-button-text: white;
-  --primary-button-hover-bg: #373737;
-  --secondary-button-bg: #ccc;
-  --secondary-button-text: #2e2e2e;
-  --secondary-button-hover-bg: #ddd;
-  --span-text: #1232ff;
-  --search-bar-bg: #eee;
-  --search-bar-text: #8f8f8f;
-  --border: #ddd;
-  --modal-backdrop: rgba(0, 0, 0, 0.7);
-  --modal-bg: white;
-  --input-label: #aaa;
-  --input-placeholder: #ddd;
-  --input-border: #ccc;
-  --input-border-focus: #757575;
-  --input-autofill-bg: #f4f4f4;
-  --error-msg-bg: #f6ebeb;
-  --bio-placeholder: #ccc;
-}
-
-body.dark-mode {
-  --bg-color: #1f1f1f;
-  --text-color: #ededed;
-  --link-color: #3a4fcb;
-  --button-bg: #3a4fcb;
-  --button-text: #ededed;
-  --button-hover-bg: #4257c9;
-  --primary-button-bg: #3a4fcb;
-  --primary-button-text: #ededed;
-  --primary-button-hover-bg: #4257c9;
-  --secondary-button-bg: #2e2e2e;
-  --secondary-button-text: white;
-  --secondary-button-hover-bg: #373737;
-  --span-text: #3a4fcb;
-  --search-bar-bg: #2c2c2c;
-  --search-bar-text: #8f8f8f;
-  --border: #404040;
-  --modal-backdrop: rgba(17, 17, 17, 0.7);
-  --modal-bg: #1f1f1f;
-  --input-label: #7f7f7f;
-  --input-placeholder: #5f5f5f;
-  --input-border: #373737;
-  --input-border-focus: #666666;
-  --input-autofill-bg: #272727;
-  --error-msg-bg: #381919;
-  --bio-placeholder: #5f5f5f;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-html,
-body {
-  overflow-y: auto;
-}
-
-html {
-  box-sizing: border-box;
-  font: var(--fs-body) "Space Grotesk", sans-serif;
-}
-
-body {
-  height: 100vh;
-  padding: 0 5rem;
-  display: flex;
-  flex-direction: column;
-  background-color: var(--bg-color);
-  color: var(--text-color);
-  transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-app-root {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-span.special-text {
-  color: var(--span-text);
-}
-
-img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-body,
-input,
-textarea,
-select,
-option {
-  font: inherit;
-}
-
-:is(p, ul, ol):not(:last-child) {
-  margin-bottom: 1.2rem;
-}
-
-ul,
-ol {
-  padding-left: 2rem;
-}
-
-ul li,
-ol li {
-  line-height: 1.4;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-h1 {
-  font-size: var(--fs-heading-1);
-}
-h2 {
-  font-size: var(--fs-heading-2);
-}
-h3 {
-  font-size: var(--fs-heading-3);
-}
-h4 {
-  font-size: var(--fs-heading-4);
-}
-h5 {
-  font-size: var(--fs-heading-5);
-}
-h6 {
-  font-size: var(--fs-heading-6);
-}
-
-/** Modal styles **/
-.cdk-overlay-backdrop {
-  background-color: var(--modal-backdrop) !important;
-  overflow-y: auto !important;
-  -webkit-overflow-scrolling: touch;
-  max-height: 100vh;
-}
-
-.cdk-overlay-pane {
-  max-height: 90vh;
-  overflow: auto;
-}
-
-.mat-mdc-dialog-surface {
-  background-color: transparent !important;
-}
-
-/** Quill styles **/
-
-/*& Editor */
-
-.ql-container {
-  font-size: inherit !important;
-}
-
-/*^ Placeholder ^*/
-.ql-editor.ql-blank::before {
-  color: var(--border) !important;
-  font-style: normal !important;
-  right: 0 !important;
-  left: 0 !important;
-}
-
-.ql-editor {
-  padding: 2rem 0 !important;
-  line-height: 2 !important;
-
-  li {
-    line-height: 2;
-  }
-
-  a {
-    text-decoration: none !important;
-    color: var(--link-color) !important;
-  }
-}
-
-/*& Toolbar */
-
-.ql-toolbar.ql-snow {
-  border: none !important;
-  display: flex;
-  justify-content: center;
-  font-family: inherit !important;
-}
-
-.ql-toolbar button:hover svg {
-  fill: var(--button-bg) !important;
-}
-
-.ql-toolbar button.ql-active svg {
-  fill: var(--button-bg) !important;
-}
-
-.ql-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-label {
-  border: none;
-}
-
-/*& Dropdown menu */
-.ql-picker-options {
-  background-color: var(--search-bar-bg) !important;
-  border: none !important;
-  border-radius: 0.5rem;
-  box-shadow: none !important;
-}
-
-.ql-picker-options .ql-picker-item {
-  color: var(--search-bar-text);
-}
-
-.ql-snow .ql-picker-options .ql-picker-item:hover {
-  color: var(--button-hover-bg) !important;
-}
-
-/*& Code block */
-.ql-snow .ql-editor .ql-code-block-container {
-  background-color: var(--search-bar-bg) !important;
-  color: var(--text-color) !important;
-  padding: 1.5rem 2rem !important;
-  border-radius: 0.8rem !important;
-  font-family: inherit;
-  transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-/*& Inline code */
-.ql-editor code {
-  background-color: var(--search-bar-bg) !important;
-  color: var(--button-bg);
-  font-family: inherit;
-  font-size: inherit !important;
-  padding: 0.1rem 0.5rem !important;
-  border-radius: 0.5rem !important;
-  transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-/*& Link */
-.ql-tooltip {
-  background-color: var(--search-bar-bg) !important;
-  border: none !important;
-  border-radius: 0.5rem;
-  padding: 0.5rem 1rem !important;
-  color: var(--text-color) !important;
-  box-shadow: none !important;
-}
-
-.ql-tooltip input {
-  background-color: var(--search-bar-bg) !important;
-  padding: 0.3rem !important;
-  border-radius: 0.3rem !important;
-  color: var(--text-color);
-}
-
-.ql-tooltip a {
-  color: var(--link-color) !important;
-}
-
-.ql-tooltip.ql-editing input {
-  background-color: var(--search-bar-bg) !important;
-}
-
-/** Article details content styles **/
-.article-content {
-  width: 100%;
-  height: 100%;
-  font-family: "Space Mono", monospace;
-  line-height: 2;
-
-  li {
-    line-height: 2;
-
-    &[data-list="bullet"] {
-      list-style-type: disc;
-    }
-  }
-
-  h2 {
-    font-size: calc(var(--fs-heading-2) * 0.56);
-  }
-
-  h3 {
-    font-size: calc(var(--fs-heading-3) * 0.56);
-  }
-
-  p {
-    margin-bottom: 0;
-  }
-
-  a {
-    color: var(--link-color);
-  }
-
-  code {
-    background-color: var(--search-bar-bg);
-    color: var(--button-bg);
-    font-family: inherit;
-    font-size: inherit;
-    padding: 0.1rem 0.5rem;
-    border-radius: 0.5rem;
-    transition: background-color 0.3s ease, color 0.3s ease;
-  }
-
-  .ql-code-block-container {
-    background-color: var(--search-bar-bg);
-    padding: 1.5rem 2rem;
-    border-radius: 0.8rem;
-    transition: background-color 0.3s ease, color 0.3s ease;
-  }
-
-  .ql-code-block {
-    white-space: pre-wrap;
-    font-size: 0.9rem;
-  }
-}
+@import url("./styles/variables.css");
+@import url("./styles/base.css");
+@import url("./styles/quill.css");
+@import url("./styles/modal.css");
+@import url("./styles/article.css");
