--- a/src/app/features/article/article-category-filter/article-category-filter.css
+++ b/src/app/features/article/article-category-filter/article-category-filter.css
@@ -41,6 +41,7 @@ hr {
 .dropdown-container {
   position: absolute;
   background-color: var(--search-bar-bg);
+  transition: background-color 0.3s ease;
   border-radius: 0.5rem;
   top: 0;
   right: -22%;
