--- a/src/app/features/article/article-header/article-header.html
+++ b/src/app/features/article/article-header/article-header.html
@@ -23,7 +23,7 @@
           <span>Edit</span>
         </div>
       </div>
-      <div class="delete" (click)="onDelete()">
+      <div class="delete" (click)="delete.emit()">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           version="1.1"
@@ -48,20 +48,25 @@
       <div class="toolbar-container toolbar-left">
         <div class="author">
           by
-          <span (click)="onAuthorClick(article.authorId)">{{
+          <span (click)="authorClick.emit(article.authorId)">{{
             article.authorName
           }}</span>
         </div>
 
         <div class="likes">
+          @if (isOwner) {
+          <span class="popup popup-error fade"
+            >You can't like your own article</span
+          >
+          }
           <svg
             xmlns="http://www.w3.org/2000/svg"
             version="1.1"
             viewBox="10 23 85 55"
             [class]="hasLiked ? 'heart-icon liked' : 'heart-icon'"
-            (click)="onLike()"
+            (click)="like.emit()"
           >
-            <title>Heart</title>
+            <title>Like</title>
             <g transform="translate(0,-952.36218)">
               <path
                 d="m 18.356844,974.98986 c -7.1459,7.50345 -7.139,19.5777 0,27.08854 l 31.6235,33.2838 c 10.5534,-11.0817 21.1069,-22.1634 31.6603,-33.2453 7.1458,-7.50359 7.1458,-19.58504 0,-27.08864 -7.1458,-7.50358 -18.6513,-7.50375 -25.7972,0 l -5.8264,6.11805 -5.863,-6.15645 c -7.1459,-7.50359 -18.6515,-7.50359 -25.7972,0 z"
@@ -81,7 +86,7 @@
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 640 640"
             [class]="hasBookmarked ? 'bookmark-icon checked' : 'bookmark-icon'"
-            (click)="onBookmark()"
+            (click)="bookmark.emit()"
           >
             <title>Save</title>
             <path
@@ -93,14 +98,14 @@
 
         <div class="share">
           @if (isCopied) {
-          <span #popUp class="popup-copied fade">Link copied!</span>
+          <span class="popup popup-copied fade">Link copied!</span>
           }
           <svg
             xmlns="http://www.w3.org/2000/svg"
             version="1.1"
             viewBox="2 -5 100 100"
             class="share-icon"
-            (click)="onShare()"
+            (click)="share.emit()"
           >
             <title>Copy link</title>
             <path
@@ -117,17 +122,3 @@
     <img [src]="article.thumbnailUrl" alt="Article cover image" />
   </div>
 </div>
-
-<!-- <svg
-  xmlns="http://www.w3.org/2000/svg"
-  version="1.1"
-  viewBox="-1 0 105 95"
-  class="share-icon"
-  (click)="onShare()"
->
-  <title>Copy link</title>
-  <path
-    d="m67.234 17.875c7.3672-7.3203 19.371-7.3203 26.738 0l0.007813-0.007812c3.5742 3.5469 5.5352 8.2695 5.5352 13.285 0 5.0117-1.9727 9.7266-5.543 13.277l-28.73 28.551c-3.5703 3.5469-8.3242 5.5078-13.367 5.5078-5.0469 0-9.7891-1.9492-13.359-5.5-3.5742-3.5469-5.5352-8.2617-5.5352-13.285s1.9609-9.7383 5.5352-13.285l12.352-12.277 3.457 3.4297-12.355 12.281c-2.6523 2.6367-4.1094 6.1289-4.1094 9.8594 0 3.7344 1.4648 7.2383 4.1094 9.8633 2.6562 2.6406 6.168 4.0859 9.9141 4.0859 3.7461 0 7.2617-1.4453 9.9141-4.0859l28.73-28.551c2.6445-2.6367 4.1094-6.1172 4.1094-9.8516s-1.4648-7.2344-4.1094-9.8633c-5.4648-5.4297-14.363-5.4297-19.84 0l-2 1.9883-3.4531-3.4336zm-57.75 60.816c5.4648 5.4297 14.363 5.4414 19.836 0l-0.007812-0.007812 2-1.9883 3.4531 3.4336-2 1.9883c-3.5703 3.5391-8.3125 5.4961-13.367 5.4961-5.0547 0-9.7969-1.9492-13.371-5.4961-3.5703-3.5508-5.5312-8.2656-5.5312-13.289 0-5.0117 1.9688-9.7344 5.543-13.277l28.727-28.551c5.5234-5.4883 13.73-7.0391 20.895-3.9453 2.168 0.92969 4.1367 2.2578 5.8359 3.9453 1.707 1.6992 3.043 3.6562 3.9805 5.8203 1.0156 2.3086 1.5508 4.8867 1.5508 7.4688 0 5.0234-1.9609 9.7344-5.5312 13.285l-12.355 12.277-3.4531-3.4336 12.352-12.277c2.6562-2.6367 4.1094-6.1406 4.1094-9.8633 0-1.9102-0.39844-3.832-1.1523-5.5391-0.69922-1.6094-1.6875-3.0547-2.957-4.3125-1.2578-1.2539-2.7109-2.2305-4.3203-2.9219-5.3203-2.2969-11.398-1.1445-15.508 2.9297l-28.727 28.551c-2.6445 2.6289-4.1094 6.1289-4.1094 9.8555 0 3.7227 1.4648 7.2227 4.1094 9.8516z"
-    fill-rule="evenodd"
-  />
-</svg> -->
