--- a/src/app/features/header/theme-toggle-button/theme-toggle-button.html
+++ b/src/app/features/header/theme-toggle-button/theme-toggle-button.html
@@ -1,5 +1,5 @@
 <button
-  (click)="onClick()"
+  (click)="toggleTheme.emit()"
   id="themeToggle"
   [attr.aria-label]="
     isDarkMode ? 'Switch to light mode' : 'Switch to dark mode'
