--- a/src/app/pages/article-create/article-create.html
+++ b/src/app/pages/article-create/article-create.html
@@ -1,21 +1,20 @@
-@if (isLoading) {
-<app-loader></app-loader>
-} @else if (serverErrorMessage) {
-<app-error-message
-  [serverErrorMessage]="serverErrorMessage"
-></app-error-message>
-} @else {
 <form [formGroup]="createArticleForm">
   <app-article-header-form
     [articleCategories]="articleCategories"
     [form]="createArticleForm"
     [isFormInvalid]="isFormInvalid"
+    [isLoading]="isLoading"
     [fileName]="fileName"
     [previewFileUrl]="previewFileUrl"
     (fileSelected)="onFileSelected($event)"
     (submit)="onFormSubmit()"
+    (cancel)="onCancel()"
   ></app-article-header-form>
 
   <app-text-editor [form]="createArticleForm"></app-text-editor>
 </form>
+@if (hasError) {
+<app-toast-notification
+  [textContent]="serverErrorMessage"
+></app-toast-notification>
 }
