Added error service + refactoring

--- a/src/app/features/article/article-header-form/article-header-form.html
+++ b/src/app/features/article/article-header-form/article-header-form.html
@@ -57,7 +57,7 @@
     </div>
 
     <div class="buttons">
-      <a (click)="cancel.emit()" class="btn cancel-btn">Cancel</a>
+      <a (click)="close.emit()" class="btn cancel-btn">Cancel</a>
 
       <div class="btn publish-btn">
         @if (isFormInvalid) {
