--- a/src/app/pages/article-create/article-create.html
+++ b/src/app/pages/article-create/article-create.html
@@ -7,8 +7,8 @@
     [fileName]="fileName"
     [previewFileUrl]="previewFileUrl"
     (fileSelected)="onFileSelected($event)"
-    (submit)="onFormSubmit()"
-    (cancel)="onCancel()"
+    (submit)="onSubmit()"
+    (close)="onCancel()"
   ></app-article-header-form>
 
   <app-text-editor [form]="createArticleForm"></app-text-editor>
