--- a/src/app/shared/empty-state/empty-state.css
+++ b/src/app/shared/empty-state/empty-state.css
@@ -7,16 +7,26 @@
   gap: 1.5rem;
 }
 
-.empty-state-icon {
-  svg {
-    width: 10rem;
-    height: auto;
-    fill: var(--text-color);
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+
+  h6 {
+    font-size: 1rem;
+  }
+
+  p {
+    font-size: 0.9rem;
+    font-weight: 300;
+    text-align: center;
+    width: 30ch;
+    line-height: 1.4;
+    margin-bottom: 0;
   }
 }
 
-p {
-  font-size: 1.5rem;
-  text-align: center;
-  font-weight: 300;
+app-cta-button {
+  font-size: smaller;
 }
