--- a/src/app/pages/author-details/author-details.html
+++ b/src/app/pages/author-details/author-details.html
@@ -6,7 +6,10 @@
   @if (articles.length > 0) {
   <app-article-grid [articles]="articles" [columns]="2"></app-article-grid>
   } @else {
-  <app-empty-state></app-empty-state>
+  <app-empty-state
+    [isOwner]="isOwner"
+    [isLoggedIn]="!!currentUserId"
+  ></app-empty-state>
   }
   <aside>
     <div class="header">
