--- a/src/app/pages/profile-settings/profile-details-form/profile-details-form.css
+++ b/src/app/pages/profile-settings/profile-details-form/profile-details-form.css
@@ -2,6 +2,7 @@
   flex-basis: 50%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 2.3rem;
 }
 
@@ -55,7 +56,9 @@ dd {
 form {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 1.9rem;
+  height: 100%;
 
   label {
     font-weight: 500;
