--- a/src/app/pages/article-details/article-details.html
+++ b/src/app/pages/article-details/article-details.html
@@ -9,6 +9,8 @@
   [hasLiked]="hasLiked"
   [hasBookmarked]="hasBookmarked"
   [currentUserId]="currentUserId"
+  [isMenuOpened]="isMenuOpened"
+  (toggleMenu)="toggleMenu()"
   (authorClick)="openAuthorProfile($event)"
   (like)="onLike()"
   (bookmark)="onBookmark()"
