--- a/src/styles/quill.css
+++ b/src/styles/quill.css
@@ -119,6 +119,11 @@
   border-radius: 0.8rem !important;
   font-family: inherit;
   transition: background-color 0.3s ease, color 0.3s ease;
+
+  .ql-code-block {
+    white-space: pre-wrap;
+    font-size: 0.9rem;
+  }
 }
 
 /*& Inline code */
