--- a/src/app/pages/articles/articles.html
+++ b/src/app/pages/articles/articles.html
@@ -13,9 +13,15 @@
   [columns]="3"
   (authorClick)="openAuthorProfile($event)"
 ></app-article-grid>
-<div #scrollAnchor class="scroll-anchor"></div>
+
 @if (isLoadingMore) {
 <app-loader></app-loader>
+} @else if (hasMore) {
+<app-cta-button textContent="Load more" (click)="loadMore()"></app-cta-button>
 } } @else {
-<app-empty-state></app-empty-state>
+<app-empty-state [isLoggedIn]="isLoggedIn"></app-empty-state>
+} @if (hasError) {
+<app-toast-notification
+  [textContent]="serverErrorMessage"
+></app-toast-notification>
 } }
