--- a/src/app/pages/author-details/author-details.css
+++ b/src/app/pages/author-details/author-details.css
@@ -3,14 +3,21 @@
   display: flex;
   flex-direction: column;
   gap: 3.3rem;
-  margin: 5rem auto;
-  width: 100%;
+  margin: 6rem 0;
 }
 
 .content {
   height: 100%;
   display: flex;
   gap: 4rem;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3.5rem;
+  flex: 0 0 65%;
 }
 
 aside {
