--- a/src/app/pages/reading-list/reading-list.css
+++ b/src/app/pages/reading-list/reading-list.css
@@ -3,8 +3,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 3.3rem;
-  margin: 5rem auto;
+  gap: 3.5rem;
+  max-width: 80ch;
+  margin: 7rem auto;
   width: 100%;
 }
 
@@ -48,4 +49,8 @@
   .empty-icon rect {
     transition: fill 0.3s ease, color 0.3s ease;
   }
+}
+
+app-cta-button {
+  align-self: center;
 }
